# web_flood

./: README_automatic_alerts.md  check_coordinates.py  check_sms_status.py  cookies.txt  create_admin.py  db.sqlite3  deployment_guide.md  deployment_requirements.txt  deployment_settings.py  generate_and_train_model.py  init_test_data.py  local_deployment_guide.md  local_settings.py  manage.py  mysql_migration_guide.md  mysql_specific_notes.md  notes  pg_to_mysql_migration.py  prediction_test_results.json  project_dependencies.md  pyproject.toml  requirements.txt  run_model_training.py  run_weather_update.py  setup_automatic_alerts_cron.sh  setup_mysql_local.py  test_advanced_predictions.py  test_django_setup.py  test_ensemble.py  test_notifications.py  train_advanced_models.py  weather_data_fetcher.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
api/: serializers.py  urls.py  views.py
attached_assets/: Pasted--Alerts-Fetching-alerts-with-URL-api-flood-alerts-active-true-municipality-id-1-barangay-id-4--1746347315884.txt  Pasted--Map-Adjusting-map-to-fit-12-points-charts-js-424-No-chart-data-available-for-rainfall-anonymous--1746420690781.txt  Pasted-1-Login-Page-Simple-login-form-username-password-Forgot-Password-link-System-logo-head-1746335211807.txt  Pasted-TemplateSyntaxError-at-notifications-Invalid-filter-selectattr-Request-Method-GET-Request-U-1746339621426.txt  Pasted-TemplateSyntaxError-at-notifications-Invalid-filter-selectattr-Request-Method-GET-Request-U-1746339729314.txt
backups/: flood_monitoring_backup_2025-05-04_084759.json
core/: admin.py  (+7 more)
(+61 files in other folders)
