[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.0",
    "matplotlib>=3.10.1",
    "mysql-connector-python>=9.3.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "tensorflow>=2.14.0",
    "trafilatura>=2.0.0",
]
